--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ jdk:
   - oraclejdk7
   - oraclejdk8
 
+branches:
+  only:
+    - master
+    - develop
+
 after_success:
   - mvn clean verify jacoco:report coveralls:report
